ODROID-C2: Added buttons to the low dpi navigation bar.
- Added buttons in landscape mode.

Conflicts:
	packages/SystemUI/res/values/strings.xml

Change-Id: I3a072cb049074b039a21ecb640350d3ada510e81

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -197,6 +197,10 @@
     <!-- Label for the installer CD image option in UsbPreferenceActivity. [CHAR LIMIT=50] -->
     <string name="installer_cd_button_title">Install Android File Transfer app for Mac</string>
 
+    <!-- Content description of the Volume Up button for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_vol_up">Volume Up</string>
+    <!-- Content description of the Volume Down button for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_vol_down">Volume Dowwn</string>
     <!-- Content description of the back button for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
     <string name="accessibility_back">Back</string>
     <!-- Content description of the home button for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
@@ -219,6 +223,10 @@
     <string name="accessibility_unlock_button_fingerprint">Unlock button, waiting for fingerprint</string>
     <!-- Accessibility action of the unlock button when fingerpint is on (not shown on the screen). [CHAR LIMIT=NONE] -->
     <string name="accessibility_unlock_without_fingerprint">Unlock without using your fingerprint</string>
+    <!-- Content description of the shutdown button for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_shutdown">Shutdown</string>
+    <!-- Content description of the screenshot button for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_screenshot">Screenshot</string>
     <!-- Click action label for accessibility for the unlock button. [CHAR LIMIT=NONE] -->
     <string name="unlock_label">unlock</string>
     <!-- Click action label for accessibility for the phone button. [CHAR LIMIT=NONE] -->
